--- a/css/index.css
+++ b/css/index.css
@@ -213,7 +213,7 @@ overflow:visible;
 	float: left;
 	padding-top: 8px;
 	padding-right: 5px;
-	padding-left: 60px;
+	padding-left: 15%;
 	height: auto;
 }
 #music{
